# notation

./: CHANGELOG.md  Cargo.toml
apps/notation_kb/src/: index_panel.rs
apps/notation_kb/src/theory/: sound.rs
apps/notation_toolbox/: Cargo.toml
apps/notation_toolbox/src/: main.rs
apps/tonnez/: Cargo.toml
apps/tonnez/src/: app.rs  assets.rs  main.rs
bevy/notation_audio/src/: mono_stream.rs  stereo_stream.rs
bevy/notation_midi/src/: midi_plugin.rs
bevy/notation_midi/src/native/: mod.rs
cli/: .gitignore  Cargo.toml
cli/src/: main.rs  util.rs
design/: tonnez_texture.afdesign  tonnez_texture_white.afdesign
dsl/notation_dsl/src/: helper.rs
dsl/notation_dsl/src/fretted/: shape.rs
export/notation_svg/: Cargo.toml
export/notation_svg/src/: lib.rs
export/notation_svg/src/fretted/: shape.rs
model/notation_model/src/: tab.rs
views/fretboard/: Cargo.toml
views/fretboard/src/: lib.rs
views/tab_viewer/: Cargo.toml
views/tab_viewer/src/dsl/: get_tab_asset.rs
views/tab_viewer/src/guitar/: guitar_string.rs  guitar_view.rs
views/tab_viewer/src/mini/: mini_map.rs
views/tab_viewer/src/notation/: app.rs
views/tab_viewer/src/play/: play_plugin.rs
views/tab_viewer/src/rhythm/: rhythm_bar.rs
views/tab_viewer/src/strings/: pick_systems.rs
views/tab_viewer/src/tab/: tab_asset.rs
views/tab_viewer/src/theme/: guitar_theme.rs  shapes_theme.rs  theme_colors.rs  theme_texts.rs
