[package]
name = "notation_cli"
version = "0.6.0"
description = "Fun notation - cli"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
notation_dsl  = { workspace = true }
notation_svg  = { workspace = true }

