[package]
name = "fretboard"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation view - tab viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notation_bevy_utils = { path = "../../crates/notation_bevy_utils" }
notation_model = { path = "../../crates/notation_model" }
